# imas-python

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  INSTALL.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  asv.conf.json  conftest.py  pyproject.toml  requirements.txt  requirements_backends_al.txt  requirements_core.txt  requirements_docs.txt  requirements_test.txt  setup.cfg  setup.py  setup_helpers.py
assets/: IDSDef2MDSpreTree.xsl  IDS_minimal.xml  IDS_minimal_index.xml  IDS_minimal_types.xml  migrations.py
bamboo/: 00_setenv_modules.sh  10_build_imas_git.sh  20_setenv_imaspy.sh  30_build_imaspy.sh  40_pytest_imaspy.sh  50_pytest_imaspy.sh  99_clean_imaspy_artifacts.sh  pytest-iter-al-git.sh  pytest-iter-native.sh  pytest-iter.sh
benchmarks/: core_profiles.py  edge_profiles.py  technical.py  utils.py
ci/: build_dd_zip.sh  build_docs_and_dist.sh  linting.sh  run_benchmark.sh  run_pytest.sh
containers/arch/: Dockerfile  build.sh
docs/: Makefile  imaspy
docs/source/: api-hidden.rst  api.rst  api_overview.rst  benchmarking.rst  changelog.rst  ci_config.rst  cli.rst  code_style.rst  conf.py  configuring.rst  dd_load_callgraph.rst  developing.rst  identifiers.rst  imaspy_architecture.rst  index.rst  installing.rst  intro.rst  lazy_loading.rst  mdsplus.rst  metadata.rst  multi-dd.rst  netcdf.rst  release_imaspy.rst  resampling.rst  validation.rst
docs/source/courses/: advanced_user_training.rst  basic_user_training.rst
docs/source/courses/advanced/: dd_versions.rst  explore.rst  hashing.rst  metadata.rst  xarray.rst
docs/source/courses/advanced/imaspy_snippets/: alternative_coordinates.py  autoconvert_get.py  autoconvert_put.py  calc_with_units.py  coordinates.py  dd_versions.py  explore_data.py  explore_structures.py  hashing.py  ids_convert.py  ids_to_xarray.py  tensorized_ids_to_xarray.py
docs/source/courses/basic/: analyze.rst  create.rst  explore.rst  setup.rst  transform.rst
docs/source/courses/basic/al4_snippets/: create_core_profiles.py  explore_content.py  iterate_core_profiles.py  plot_core_profiles_ne_timeslice.py  plot_core_profiles_te_timeslice.py  print_idss.py  read_core_profiles_ne_timeslice.py  read_core_profiles_te_timeslice.py  read_equilibrium_time_array.py  (+2 more)
docs/source/netcdf/: conventions.rst
envs/: README.md
envs/common/: 00_common_bash.sh  01_cleanenv_imaspy.sh  10_setenv_python.sh  22_build_python_venv.sh  25_build_imas_git.sh  35_build_imaspy.sh  36_install_imaspy.sh  70_pytest_imaspy.sh  80_build_docs.sh  99_clean_imaspy_artifacts.sh
envs/heimdall/: 00_setenv_modules.sh  20_setenv_imas_git.sh  pytest-iter-al-git.sh
envs/iter-bamboo/: 00_setenv_modules.sh  01_cleanenv_imaspy.sh  02_setenv_python.sh  10_build_imas_git.sh  10_setenv_imas_monorepo.sh  10_setenv_python.sh  20_setenv_imas_git_hpc.sh  20_setenv_imas_git_sdcc.sh  20_setenv_imas_monorepo.sh  20_setenv_imaspy.sh  22_build_python_venv.sh  25_build_imas_git.sh  30_build_imaspy.sh  30_setenv_imaspy.sh  35_build_imaspy.sh  36_install_imaspy.sh  70_pytest_imaspy.sh  80_build_docs.sh  99_clean_imaspy_artifacts.sh  README.md  build_imaspy_docs.sh  export_imaspy_version.sh  iter-env.sh  only-pytest-iter-al-git-sdcc.sh  pytest-iter-al-git-hpc.sh  pytest-iter-al-git-sdcc.sh  pytest-iter-al-git.sh  pytest-iter-monorepo.sh  pytest-iter-native.sh  transform.xslt
imaspy/: __init__.py  __main__.py  _util.py  _version.py  al_context.py  al_exception.py  context_store.py  db_entry.py  db_entry_helpers.py  dd_helpers.py  dd_zip.py  exception.py  ids_base.py  ids_classes.py  ids_convert.py  ids_coordinates.py  ids_data_type.py  ids_defs.py  ids_factory.py  ids_identifiers.py  ids_metadata.py  ids_mixin.py  ids_numeric_array.py  ids_path.py  ids_primitive.py  ids_root.py  ids_struct_array.py  ids_structure.py  ids_toplevel.py  imas_al_env_parsing.py  imas_interface.py  imas_ual_env_parsing.py  imaspy_exceptions.py  logger.py  mdsplus_model.py  migration.py  setup_logging.py  test_all_dd_versions.py  test_cli.py  test_cli_ids.py  (+29 more)
imaspy/assets/: IDSDef2MDSpreTree.xsl  IDS_fake_toplevel.xml  IDS_minimal_2.xml  IDS_minimal_struct_array.xml  IDS_minimal_types.xml  ITER_134173_106_core_profiles.ids  ITER_134173_106_equilibrium.ids  core_profiles.ids  equilibrium.ids
imaspy/backends/: __init__.py  common.py  db_entry_impl.py  ual.py  xarray_core_utils.py
imaspy/backends/imas_core/: __init__.py  al_context.py  db_entry_al.py  db_entry_helpers.py  imas_interface.py  mdsplus_model.py  uda_support.py
imaspy/backends/netcdf/: __init__.py  db_entry_nc.py  ids2nc.py  nc2ids.py  nc_entry.py  nc_metadata.py  nc_validate.py
imaspy/command/: cli.py  db_analysis.py  helpers.py  imaspy.py  timer.py
imaspy/command/subcommands/: ids.py
imaspy/examples/: ids_dummy_class.py  read_write_nbi.py
imaspy/netcdf/: ids2nc.py  nc2ids.py  nc_entry.py  nc_metadata.py
imaspy/netcdf/test/: test_ids2nc.py  test_nc_autofill.py  test_nc_entry.py  test_nc_metadata.py
imaspy/test/: test_all_dd_versions.py  test_cli.py  test_cli_ids.py  test_context_store.py  test_dbentry.py  test_dd_helpers.py  test_dd_zip.py  test_deepcopy.py  test_exception.py  test_get_sample.py  test_hash.py  test_helpers.py  test_identifiers.py  test_ids2nc.py  test_ids_ascii_data.py  test_ids_convert.py  test_ids_coordinates.py  test_ids_data_type.py  test_ids_factory.py  test_ids_metadata.py  test_ids_mixin.py  test_ids_path.py  test_ids_primitive.py  test_ids_root.py  test_ids_struct_array.py  test_ids_structure.py  test_ids_toplevel.py  test_ids_validate.py  test_init.py  test_latest_dd_autofill.py  test_latest_dd_manual.py  test_latest_dd_resample.py  test_lazy_loading.py  test_list_occurrences.py  test_load_multi_dd.py  test_minimal.py  test_minimal_conversion.py  test_minimal_io.py  test_minimal_struct_array_io.py  test_minimal_types.py  (+14 more)
pymas/: __init__.py  ids_classes.py  setup_logging.py
pymas/_libs/: README.md
pymas/backends/: common.py  file_manager.py  ual.py  xarray_core_indexing.py
pymas/examples/: ids_dummy_class.py
tools/: compare_lowlevel_access_patterns.py  extract_test_data.py
(+20 files in other folders)
