[build-system]
# Minimum requirements for the build system to execute.
# Keep this on a single line for the grep magic of build scripts to work
requires = ["setuptools>=61", "wheel", "Cython>=0.28", "numpy", "gitpython", "packaging", "tomli;python_version<'3.11'", "versioneer[toml]"]
# needs saxon9he.jar in CLASSPATH

build-backend = "setuptools.build_meta"

[project]
name = "imaspy"
authors = [
  {name = "IMASPy Developers"},
  {name = "Olivier Hoenen", email = "olivier.hoenen@iter.org"},
]
description = "Pythonic wrappers for the IMAS Access Layer"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Plugins",
    "Environment :: X11 Applications",
    "Framework :: Flake8",
    "Framework :: IPython",
    "Framework :: Matplotlib",
    "Framework :: Pytest",
    "Framework :: Sphinx",
# Custom trove classifiers are not allowed, and newer versions of python setuptools will fail to build
# when classifiers other than those listed on: https://pypi.org/classifiers/ are included
#    "Framework :: IMAS",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
# The license is prepended by private which makes it a valid trove classifier,
# it will also prevent uploading to package indices such as PyPI
    "Private :: License :: ITER License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Unix Shell",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.15.4",
    "cached-property; python_version < '3.8'",
    "tree-format",
    "scipy",
    "click",
    "importlib_resources",
    "packaging",
]

[project.optional-dependencies]
# these self-dependencies are available since pip 21.2
all = [
    "imaspy[test,docs]"
]
docs = [
    "sphinx>=6.0.0,<7.0.0",
    "sphinx_rtd_theme>=0.5",
    "recommonmark>=0.6",
    "sphinx-autosummary-accessors>=0.1.2",
    "sphinx-autodoc-typehints>=1.1.1",
    "sphinxcontrib.mermaid>=0.8",
    "sphinx-tabs",
]
test = [
    "pytest>=5.4.1",
    "pytest-cov>=0.6",
    "pytest-xdist",
    "pytest-randomly",
    "matplotlib",
]

[project.scripts]
build_DD = "imaspy.dd_helpers:prepare_data_dictionaries"
imaspy = "imaspy.command.cli:cli"

[project.urls]
homepage = "https://git.iter.org/projects/IMAS/repos/imaspy"

[tool.setuptools.packages.find]
where = ["."]
include = ["imaspy*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
markers = [
    "cli: Tests for the command line interface.",
    "slow: Slow tests.",
]
testpaths = "imaspy"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "imaspy/_version.py"
versionfile_build = "imaspy/_version.py"
tag_prefix = ""
parentdir_prefix = ""
