[metadata]
name = imaspy
author = imaspy Developers
author_email = olivier.hoenen@iter.org
license = ITER license
description = Pythonic wrappers for the IMAS Access Layer
long_description_content_type=text/x-rst
long_description = file: README.md
url = https://git.iter.org/projects/IMAS/repos/imaspy
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Plugins
    Environment :: X11 Applications
    Framework :: Flake8
    Framework :: IPython
    Framework :: Matplotlib
    Framework :: Pytest
    Framework :: Sphinx
    Framework :: IMAS
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: ITER License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Unix Shell
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System
    Topic :: System :: Software Distribution
    Topic :: Utilities

# Build data-dictionairy and access-layer inplace
[build_ext]
    inplace=1

[options]
package_dir =
    =.
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7

[options.package_data]
where = .

[options.data_files]
imaspy = data-dictionary/IDSDef.zip

[options.entry_points]
console_scripts =
    ids_convert = imaspy.tools:convert
    ids_info = imaspy.tools:info
    ids_print = imaspy.tools:tree
    build_DD = imaspy.dd_helpers:prepare_data_dictionaries

[flake8]
ignore =
    W503 # line break before binary operator
exclude=
    .eggs
    docs
max-line-length = 88

[aliases]
test = pytest
