# Build data-dictionairy and access-layer inplace
[build_ext]
    inplace=1

[options]
package_dir =
    =.
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html

[options.package_data]
where = .

[options.data_files]
imaspy = imaspy/assets/IDSDef.zip

[flake8]
ignore =
    W503 # line break before binary operator
exclude=
    .eggs
    docs
max-line-length = 88

[aliases]
test = pytest
